--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node ./dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,7 +13,10 @@
     "gulp": "~3.5.2",
     "gulp-util": "~2.2.14",
     "gulp-concat": "~2.1.7",
-    "gulp-uglify": "~0.2.1"
+    "gulp-uglify": "~0.2.1",
+    "gulp-clean": "~0.2.4",
+    "gulp-livereload": "~1.1.1",
+    "tiny-lr": "0.0.5"
   },
   "dependencies": {
     "express": "~3.4.8"
