--- a/bower.json
+++ b/bower.json
@@ -9,11 +9,12 @@
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
+    "libs",
     "test",
     "tests"
   ],
   "dependencies": {
-    "pixi": "~1.5.0"
+    "pixi": "~1.5.0",
+    "requirejs": "~2.1.10"
   }
 }
